# FeatherNotes-inkbox

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  deploy_debug.sh  kobo.cmake
feathernotes/: CMakeLists.txt  device.cpp  device.h  device.ui  dommodel.cpp  filedialog.h  find.cpp  fn.cpp  fn.h  fn.ui  main.cpp  pref.cpp  pref.h  prefDialog.ui  singleton.cpp  svgicons.cpp  textedit.cpp  treeview.h
feathernotes/data/: eink-feather.qss  fn.qrc
feathernotes/powerDaemon/: sleepdialog.cpp  sleepthread.cpp
inkbox_userapp/: app.json
inkbox_userapp/feathernotes/app-bin/: feathernotes.sh  sketch.sh
